# CrewAI-Design-Patterns-Implementation

./: FineTuning_LLM.ipynb  README.md  pyproject.toml
src/my_03_uv/: Essay.py  Translation.py  __init__.py  fun_fact.md  litellm.py  main.py  parallelization.py  parallelization_2.py  router.py
